--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.4",
+    "react-hot-toast": "^2.4.0",
     "wouter": "^2.9.0",
     "yup": "^0.32.11"
   },
